welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: not found: value nbPas2
for (nbPas <- 0 to nbPas2; nbPas2 <- 0 to nbPas) {
                   ^