welcome.lessons.welcome.loopfor.LoopFor.scala.code
for (nbPas <- 0 to nbPas2; nbPas2 <- 0 to nbPas) {
	if (!estSurBiscuit) {
		avance()
		}
	if (estSurBiscuit) {
		prendBiscuit()
		recule()
	}
}
